erDiagram
    activity_log {
        uuid campaign_session_id FK 
        smallint combat_turn "Adds the turn number to the display of the log."
        timestamp_with_time_zone created_date 
        uuid id PK 
        text log 
        text log_header 
    }

    campaign {
        boolean active 
        timestamp_with_time_zone created_date 
        uuid creator_user_account_id FK 
        text description 
        text icon "A URL path to the icon."
        uuid id PK 
        text name 
        text story "Holds important details and plot points about the Campaign's overarching story. This field is only viewable by the owner/admins."
    }

    campaign_admin {
        uuid campaign_id FK 
        uuid id PK 
        uuid user_account_id FK 
    }

    campaign_session {
        boolean active 
        uuid campaign_id FK 
        timestamp_with_time_zone created_date 
        uuid id PK 
        timestamp_with_time_zone start_date 
        text story "This field is only viewable by the owner/admins of the Campaign, not those participating in the session."
    }

    campaign_user {
        uuid campaign_id FK 
        uuid id PK 
        uuid user_account_id FK 
    }

    character {
        json abilities "Key points to the template ability name while the value is the score of that ability."
        boolean alive 
        smallint armor_class 
        uuid campaign_id FK 
        text class 
        timestamp_with_time_zone created_date 
        text description 
        uuid id PK 
        text image "A URL path to the image."
        smallint level 
        text name 
        text race 
        json resource_pools "Key points to the template resource pool while the value is the value of that pool."
        smallint speed 
        json stats "Stores derived stats like speed, armor class, etc."
        uuid template_id FK 
    }

    character_feat {
        uuid character_id FK 
        text description 
        uuid id PK 
    }

    character_skill {
        uuid character_id FK 
        timestamp_with_time_zone created_date 
        text description 
        uuid id PK 
        text name 
        character_varying roll "Dice notation."
    }

    character_spell {
        uuid character_id FK 
        text cost "Keep track of what this spell consumes on use. Eg. #quot;uses 50 mana#quot;."
        timestamp_with_time_zone created_date 
        text description 
        uuid id PK 
        text name 
        json properties "Miscellaneous properties like range, brightness, weight, speed, etc."
        character_varying roll "Dice notation."
    }

    character_template {
        json abilities "Stores the available/allowed ability scores and their information (user-customizable)."
        uuid campaign_id FK 
        timestamp_with_time_zone created_date 
        uuid id PK 
        json resource_pools "Stores the available/allowed resource pools and their information (user-customizable). Eg. health, mana, stamina, etc."
        text startingAbilityScoreRoll 
        json stats "Stores things like speed, armor class, initiative, etc."
    }

    combat_session {
        boolean active 
        uuid campaign_session_id FK 
        uuid id PK 
        json initiative "The key stores the character name (player and enemy) and the value is the initiative of that character."
        timestamp_with_time_zone start_date 
    }

    enemy {
        smallint challenge_rating "The rough gauge of an enemy's difficulty and power."
        uuid character_id FK 
        uuid id PK 
    }

    item {
        uuid campaign_id FK 
        uuid character_id FK 
        timestamp_with_time_zone created_date 
        text description 
        uuid id PK 
        text image "A URL path to the image."
        text name 
        character_varying roll "Dice notation."
    }

    item_skill {
        timestamp_with_time_zone created_date 
        text description 
        uuid id PK 
        uuid item_id FK 
        text name 
        character_varying roll "Dice notation."
    }

    pgmigrations {
        integer id PK 
        character_varying name 
        timestamp_without_time_zone run_on 
    }

    user_account {
        boolean admin 
        timestamp_with_time_zone created_date 
        boolean deleted 
        text display_name 
        uuid id PK 
        text password 
        text profile_picture "A URL path to the picture."
        citext username UK 
    }

    user_character {
        uuid character_id FK 
        uuid id PK 
        uuid user_account_id FK 
    }

    user_invite {
        timestamp_with_time_zone created_date 
        uuid id PK 
        uuid used_by_user_account_id FK 
        timestamp_with_time_zone used_date 
    }

    activity_log }o--|| campaign_session : "campaign_session_id"
    campaign }o--|| user_account : "creator_user_account_id"
    campaign_admin }o--|| campaign : "campaign_id"
    campaign_session }o--|| campaign : "campaign_id"
    campaign_user }o--|| campaign : "campaign_id"
    character }o--|| campaign : "campaign_id"
    character_template }o--|| campaign : "campaign_id"
    item }o--|| campaign : "campaign_id"
    campaign_admin }o--|| user_account : "user_account_id"
    combat_session }o--|| campaign_session : "campaign_session_id"
    campaign_user }o--|| user_account : "user_account_id"
    character }o--|| character_template : "template_id"
    character_feat }o--|| character : "character_id"
    character_skill }o--|| character : "character_id"
    character_spell }o--|| character : "character_id"
    enemy }o--|| character : "character_id"
    item }o--|| character : "character_id"
    user_character }o--|| character : "character_id"
    item_skill }o--|| item : "item_id"
    user_character }o--|| user_account : "user_account_id"
    user_invite }o--|| user_account : "used_by_user_account_id"
